2011-04-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/bwregiongrow.m:

	- BWREGIONGROW  Region grow segmentation of binary image from
	multiple seeds.

	* Add FiltersToolbox/bwregiongrow_aux.cpp:

	- This is an auxiliary function to bwregiongrow.m, to implement
	part of the algorithm in C++ so that we can avoid a costly loop in
	Matlab.

2011-04-26  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* ItkToolbox/ItkImFilter.cpp:

	- Change a type that was int to mwSize, so that it can be compiled
	for 64 bit architectures.

	* matlab/MatlabMakeMacros.cmake:

	- In 64 bit architectures, we need to remove the flag
	-DMX_COMPAT_32 (this is what mex -largeArrayDims does).

	* FiltersToolbox/seg2dmat.m: v0.2.1

	- We were removing voxels not connected to other voxels from the
	dictionary and the distance matrix. This creates all sorts of
	problems with other functions, because when they find an isolated
	voxel, they try to index a non-existent entry in dict or the
	distance matrix.

	* Add FiltersToolbox/bwregiongrow.m: v0.1.0

	- BWREGIONGROW  Region grow segmentation of binary image from
	multiple seeds.

2011-04-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.3.3

	- Use new slow mode in graph_nn() to avoid running out of
	memory. Either method is, however, too slow, with a expected 35
	min to partition a 468x159x475 image with only 16510 skeleton
	voxels.

	* PointToolbox/graph_nn.m: v0.2.0

	- Add new input argument FAST, to choose between running it in
	vectorized mode (faster), or using a loop (less memory).

	- Fix bug. Voxels not connected to the skeleton (min distance =
	Inf) were being assigned skeleton index 1. Now they get NaN.

	- Remove predecessors list, we don't need it, and it needs a lot
	of memory.

2011-04-23  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Delete matlab/test/bent-vessel-2d.mat

	- Not an image, just some vectors and matrices that are difficult
	to use.
